# dmsynth

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: cli_args.cpp  cli_args.h  directmusic_defs.h  dm_synth.cpp  dm_synth.h  main.cpp  midi_input.cpp  midi_input.h
